# financial-control-web

./: .env.example  .gitignore  README.md  nuxt.config.ts  package.json  tsconfig.json
backend/: Dockerfile  Makefile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
backend/app/: main.py  schemas.py  security.py  settings.py
backend/app/models/: __init__.py  base.py  essential_expense.py  income.py  member.py  month.py  non_essential_expense.py  user.py  user_essential_expense.py  user_income.py  user_month.py  user_non_essential_expense.py
backend/app/routers/: auth.py  members.py  users.py
backend/app/schemas/: members.py  users.py
backend/backend/: app.py
backend/migrations/: env.py
backend/migrations/versions/: 6a67455a92ee_initial_database.py  89cb32d10aac_create_users_table.py  beecd05b1ebf_initial_database.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_main.py  test_members.py  test_security.py  test_users.py
frontend/: eslint.config.mjs  nuxt.config.ts  package.json
frontend/src/layouts/: default.vue
frontend/src/pages/: index.vue
frontend/src/plugins/: vuetify.ts
src/components/dashboard/: ChartYears.vue  ExpenseTable.vue  FinanceCard.vue  LineChart.vue  (+1 more)
src/interfaces/: api-instance.ts  auth.ts  essential-expense.ts  income.ts  non-essential-expense.ts
src/layouts/: default.vue  login-layout.vue
src/middleware/: auth.global.ts
src/pages/: incomes.vue  index.vue  login.vue  profile.vue
src/plugins/: api.ts  piniaSharedState.ts  vuetify.ts
src/services/: base.ts
src/stores/: auth.ts  essential-expense.ts  income.ts  member.ts  non-essential-expense.ts  user.ts
(+20 files in other folders)
